# libDELILA-digitizer

./: .clang-format  .gitignore  CAENParametersLog.txt  CMakeLists.txt  MULTI_DIGITIZER_PLAN.md  PHA1.conf  PSD1.conf  PSD1_Data  PSD2.conf  PSD_Implementation_Summary.md  README.md  README_ja.md  TODO.md  dig1.conf  dig2.conf  main.cpp  test_ch_extras_opt.cpp  test_dig1_init.cpp  test_timestamp_decoding.cpp
DevTree/: PSD1.json  PSD2.json
RefMaterials/: COMPLETED.md  PHA1_Data  TIMESTAMP_DECODING_FIX.md
include/: ConfigurationManager.hpp  DataType.hpp  DataValidator.hpp  DecoderLogger.hpp  Dig1Decoder.hpp  Dig2Decoder.hpp  Digitizer.hpp  Digitizer1.hpp  Digitizer2.hpp  DigitizerFactory.hpp  EventData.hpp  IDecoder.hpp  IDigitizer.hpp  MemoryReader.hpp  PHA1Constants.hpp  PHA1Decoder.hpp  PHA1Structures.hpp  PSD1Constants.hpp  PSD1Decoder.hpp  PSD1Structures.hpp  PSD2Constants.hpp  PSD2Data.hpp  PSD2Decoder.hpp  PSD2Structures.hpp  ParameterValidator.hpp  RawData.hpp  RawToPSD2.hpp
src/: ConfigurationManager.cpp  DataValidator.cpp  Dig1Decoder.cpp  Dig2Decoder.cpp  Digitizer.cpp  Digitizer1.cpp  Digitizer2.cpp  DigitizerFactory.cpp  EventData.cpp  PHA1Decoder.cpp  PSD1Decoder.cpp  PSD2Data.cpp  PSD2Decoder.cpp  ParameterValidator.cpp  RawData.cpp  RawToPSD2.cpp
